:wolf: Fix gradients on firefox

--- a/styles/graphic.sass
+++ b/styles/graphic.sass
@@ -43,12 +43,6 @@
     &.red
       stroke: $red
 
-  .area
-    &.black
-      fill: url(#gradient-black)
-    &.red
-      fill: url(#gradient-red)
-
   .dots
     circle
       transition: opacity 0.3s
